# PrimalEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  imgui.ini  renderdoc_debug.cap  run.sh
cmake/: BasicSettings.cmake  CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake  SrcList.cmake  StaticAnalyzers.cmake  SubmodulesCheck.cmake  srclist.cmake
primal/: primal.h
primal/platform/openGL/: openGLBuffer.cpp  openGLBuffer.h  openGLContext.cpp  openGLContext.h  openGLRendererAPI.cpp  openGLRendererAPI.h  openGLShader.cpp  openGLShader.h  openGLTexture.cpp  openGLTexture.h  openGLVertexArray.cpp  openGLVertexArray.h
primal/platform/window/: linuxInput.cpp  linuxInput.h  linuxWindow.cpp  linuxWindow.h
primal/primal/: application.cpp  application.h  core.h  entryPoint.h  input.h  keyCodes.h  layer.cpp  layer.h  layerStack.cpp  log.cpp  log.h  mouseButtonCodes.h  mouseCodes.h  window.h
primal/primal/core/: application.cpp  application.h  core.h  entryPoint.h  input.h  layer.h  layerStack.cpp  layerStack.h  log.h  timestep.h  window.h
primal/primal/events/: applicationEvent.h  event.h  keyEvent.h  mouseEvent.h
primal/primal/imgui/: imGuiBuild.cpp  imGuiLayer.cpp  imGuiLayer.h
primal/primal/model/: material.cpp  material.h  mesh.cpp  model.cpp  model.h
primal/primal/renderer/: buffer.cpp  buffer.h  graphicsContext.cpp  graphicsContext.h  orthographicCamera.cpp  orthographicCamera.h  orthographicCameraController.cpp  orthographicCameraController.h  perspectiveCamera.cpp  perspectiveCamera.h  perspectiveCameraController.cpp  perspectiveCameraController.h  renderCommand.cpp  renderCommand.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  renderer3D.cpp  renderer3D.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  texture.h  vertexArray.cpp  vertexArray.h
res/shaders/: background.fs  debug_depthmap.glsl  depth_shader.glsl  flatcolor.glsl  gradient.comp  input_structures.glsl  lampshader.glsl  mesh.frag  mesh.vert  post_processing.fs  screen_quad.vs  screen_shader.glsl  tex_image.frag  texture.glsl  transparent.glsl  triangle.frag  triangle.vert
res/shaders/common/: uniforms.glsl
sandbox/: app.cpp  main.cpp  sandbox.cpp  sandbox2D.cpp  sandbox2D.h  sandbox3D.cpp  sandbox3D.h  scene_pbr_test.cpp  scene_pbr_test.h
sandbox/input_scene/: input_component.cpp  input_component.h  input_scene.cpp  input_scene.h
src/: application.cpp  application.h  camera.cpp  camera.h  engine_loop.cpp  engine_loop.h  primal.cpp  primal.h  primal_window.cpp  primal_window.h  renderer.h  vk_enum_string_helper.h  vk_types.h  window.h
src/components/: camera.cpp  camera.h  camera_component.cpp  camera_component.h  camera_frustum.cpp  camera_frustum.h  directional_light.h  fly_camera.cpp  fly_camera.h  mesh_component.cpp  mesh_component.h  point_light.h
src/core/: config.h  core.h  memory.h  module_manager.h  time.h
src/core/data_structures/: delegate.h  handle_bin.cpp  handle_bin.h
src/core/math/: common.h  math.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  util.cpp  util.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/core/memory/: mem_util.cpp  mem_util.h  memory_manager.cpp  memory_manager.h  stack_allocator.cpp  stack_allocator.h
src/core/time/: clock.cpp  clock.h  stop_watch.cpp  stop_watch.h  time.h
src/input/: GLFWInput.cpp  GLFWInput.h  input.cpp  input.h  input_module.cpp  input_module.h  key_codes.h
src/modules/graphics/: graphics_api.cpp  graphics_api.h  graphics_manager.h  graphics_module.cpp  graphics_module.h  opengl_graphics_api.h  window.cpp  window.h  window_module.cpp  window_module.h
src/platform/openGL/: openGLBuffer.cpp  openGLBuffer.h  openGLContext.cpp  openGLContext.h  openGLFramebuffer.cpp  openGLFramebuffer.h  openGLRendererAPI.cpp  openGLRendererAPI.h  openGLShader.cpp  openGLShader.h  openGLTexture.cpp  openGLTexture.h  openGLVertexArray.cpp  openGLVertexArray.h
src/platform/vulkan/: command_buffer.h  context.h  queues.h  shader_module.h  swapchain.h  validation.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_images.cpp  vulkan_images.h  vulkan_loader.cpp  vulkan_loader.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_structures_helpers.h
src/platform/window/: linuxInput.cpp  linuxInput.h  linuxWindow.cpp  linuxWindow.h
src/primal/core/: application.cpp  application.h  input.h  layer.cpp  layer.h  layerStack.cpp  layerStack.h  log.cpp  window.h
src/primal/debug/: instrumentor.h
src/primal/events/: event.h  keyEvent.h  mouseEvent.h
src/primal/imgui/: imGuiBuild.cpp  imGuiLayer.cpp  imGuiLayer.h
src/primal/model/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h
src/primal/renderer/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  graphicsContext.cpp  graphicsContext.h  orthographicCamera.cpp  orthographicCamera.h  orthographicCameraController.cpp  orthographicCameraController.h  perspectiveCamera.cpp  perspectiveCamera.h  perspectiveCameraController.cpp  perspectiveCameraController.h  renderCommand.cpp  renderCommand.h  renderer.cpp  renderer2D.cpp  renderer3D.cpp  renderer3D.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  shadowMap.cpp  shadowMap.h  texture.cpp  texture.h  vertexArray.cpp  (+1 more)
src/renderer/: command_buffer.cpp  command_buffer.h  gl_cache.cpp  gl_cache.h  material_library.cpp  material_library.h  pbr.cpp  pbr.h  pbr_capture.h  post_processor.cpp  post_processor.h  render_command.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h
src/resources/: mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  resources.cpp  resources.h  shader_loader.cpp  shader_loader.h  texture_loader.cpp  texture_loader.h
src/scene/: component.cpp  component.h  entity.cpp  entity.h  layers.cpp  layers.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  transform.cpp  transform.h
src/tools/: instrumentor.h  log.cpp  log.h
src/util/: sid.h  util.h
src/utils/: fileLoader.h
(+33 files in other folders)
